@@ -52,6 +52,8 @@ documents those changes that are of interest to users and administrators.
     four nodes with the features "knl", "snc4" and "flat" plus one node with
     the feature "haswell" are required.
  -- Improvements to how srun searches for the executible when using cwd.
+ -- Now programs can be checked before execution if test_exec is set when using
+    multi-prog option.
 
 * Changes in Slurm 17.11.3
 ==========================
